@@ -2,7 +2,7 @@
     "type": "tip",
     "stats": [
         {"name": "durability",      "value":    0, "op": "ADD"},
-        {"name": "enchantability",  "value":  0.3, "op": "MUL2"},
+        {"name": "enchantability",  "value":  0.6, "op": "MUL2"},
         {"name": "harvest_level",   "value":    0, "op": "MAX"},
         {"name": "harvest_speed",   "value": -0.1, "op": "MUL2"},
         {"name": "melee_damage",    "value":  0.0, "op": "ADD"},
